--- a/Loans.html
+++ b/Loans.html
@@ -7,7 +7,7 @@
     </head>
 
 
-    <body>
+    <body >
       <a href="index.html"><button type="submit" class="btn btn-primary">Home</button></a>
       <a href="index.html"><button type="submit" class="btn btn-warning">Sign out</button></a>
       <a href="Account.html">  <button type="button" class="btn btn-primary"> Account </button>  </a>
@@ -16,7 +16,75 @@
         <h1>Welcome To the Web Bank</h1>
         <p>Your Problem..., Our Solution....! </p>
         <h3>Loans Info</h3>
+        <h4>Click on the Images to headover</h4>
+        </div>
+        <div class="container-fluid">
+  <div class="container-fluid">
+    <div class="">
+      <div class="row">
+          <div class="col-sm-4">
+          <h1>Personal</h1>
+          <button type="button"  class="btn"  > <img src="personal.png" alt=""> </button>
+        </div>
+        <div class="col-sm-4">
+          <h1>Education</h1>
+          <button type="button"   class="btn"> <img src="education.png" alt=""></button>
+        </div>
+        <div class="col-sm-4">
+          <h1>Mortgage</h1>
+
+          <button type="button" class="btn"> <img src="mortgage.png" alt=""> </button>
+        </div>
+    </div>
+
+    <div class="">
+      <div class="row">
+          <div class="col-sm-4">
+          <h1>Cars/Bikes</h1>
+          <button type="button"  class="btn"  > <img src="car.png" alt=""> </button>
+        </div>
+        <div class="col-sm-4">
+          <h1>Home</h1>
+          <button type="button"   class="btn"> <img src="home.png" alt=""></button>
+        </div>
+        <div class="col-sm-4">
+          <h1>bussiness</h1>
+          <button type="button" class="btn"> <img src="Bussiness.png" alt=""> </button>
+        </div>
+    </div>
 
 
+    <div class="">
+      <div class="row">
+          <div class="col-sm-4">
+          <h1>Startup</h1>
+          <button type="button"  class="btn"  > <img src="startup.png" alt=""> </button>
+        </div>
+        <div class="col-sm-4">
+          <h1>Others </h1></h1>
+          <button type="button"   class="btn"> <img src="other.png" alt=""></button>
+        </div>
+        <div class="col-sm-4">
+          <h1>Contact us..</h1>
+          <button type="button" class="btn"> <img src="contactus.png" alt=""> </button>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<p>created by @sagarbank</p>
     </body>
 </html>
