--- a/Statement.html
+++ b/Statement.html
@@ -16,11 +16,31 @@
         <h1>Welcome To the Web Bank</h1>
         <p>Your Problem..., Our Solution....! </p>
         <h3>Statement Info</h3>
+        <h4>Note:Enter Proper period of transanction you want to print on Statement</h4>
+          <div class="form-group" style="margin:1% 20%">
+          <label for="usr">Email id:</label>
+          <input type="text" class="form-control" id="email">
+
+        <label for="sel1">Select Month:</label>
+  <select class="form-control" id="sel1">
+    <option>Select Any Month</option>
+    <option>1</option>
+    <option>3</option>
+    <option>6</option>
+    <option>12</option>
+    <option>18</option>
+  </select>
+  <p>NOTE: Enter proper email-Id, as the entered Email-id will be receiving statement of your account</p>
+  <a href="Account.html"> <button type="button" class="btn btn-primary"> Submit </button> </a>
+
+</div>
+
+        </div>
 
 
 
 
 
-
+<p>created by @sagarbank</p>
     </body>
 </html>
