--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
     <a href="login.html"> <button type="button" name="button" style="margin-right:10px" class="btn btn-primary">  Already a user </button> </a>
     <a href="Register.html"> <button type="button" name="button" style="margin-left:10px" class="btn btn-primary"> New User </button></a>
 </div>
-
+<p>created by @sagarbank</p>
     </body>
 </html>
