--- a/Register.html
+++ b/Register.html
@@ -14,7 +14,7 @@
         <p>Your Problem..., Our Solution....! </p>
         <h3>Register page</h3>
         <img src="Register.png" alt="">
-        <form style="margin:10px 500px">
+        <form style="margin:1% 20%">
   <div class="form-group">
     <label for="email">Enter Full Name </label>
     <input type="Text" class="form-control" placeholder="Enter Name" id="email">
@@ -109,5 +109,6 @@
       <p></p>
    <a href="login.html"><button type="submit" class="btn btn-primary">Submit</button></a>
 </div>
+<p>created by @sagarbank</p>
     </body>
 </html>
