--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,56 @@
 
 
     <body>
-        
+      <a href="index.html"><button type="submit" class="btn btn-primary">Home</button></a>
+      <a href="index.html"><button type="submit" class="btn btn-warning">Sign out</button></a>
+      <a href="Account.html"><button type="button" class="btn btn-primary"> Account </button>  </a>
+      <a href="Loans.html">  <button type="button" class="btn btn-primary"> Loans info  </button> </a>
+
+      <div class="jumbotron text-center">
+        <h1>Welcome To the Web Bank</h1>
+        <p>Your Problem..., Our Solution....! </p>
+        <h3>Contact our Executives for FREE..!!!!</h3>
+        <p>Have doubts about our policies, interest rates and many more????</p>
+        <p>We are glad to clear them...!</p>
+        <br>
+        <br>
+        <h4>Fix an appointment</h4>
+
+        <form style="margin:1% 20%" >
+  <div class="form-group">
+    <label >Name</label>
+    <input type="text" class="form-control" placeholder="Enter Full name" >
+  </div>
+  <div class="form-group">
+    <label for="email">Doubt About</label>
+    <input type="email" class="form-control" placeholder="Enter your doubt" >
+  </div>
+  <div class="form-group">
+  <label for="sel1">Select Date:</label>
+  <select class="form-control" id="sel1">
+    <option>Select Date</option>
+    <option>22-03-21</option>
+    <option>23-03-21</option>
+    <option>24-03-21</option>
+    <option>25-03-21</option>
+  </select>
+</div>
+  <div class="form-group">
+  <label for="sel1">Select time:</label>
+  <select class="form-control" id="sel1">
+    <option>Select Time</option>
+    <option>13:00-13:15</option>
+    <option>13:15-13:30</option>
+    <option>13:30-13:45</option>
+    <option>13:45-14:00</option>
+  </select>
+</div>
+
+<a href="Loans.html"><button type="submit" class="btn btn-primary">Confirm slot</button></a>
+</form>
+
+
+      </div>
 
 
 
