--- a/Loans.html
+++ b/Loans.html
@@ -66,24 +66,14 @@
         </div>
         <div class="col-sm-4">
           <h1>Contact us..</h1>
-          <button type="button" class="btn"> <img src="contactus.png" alt=""> </button>
+          <a href="Contact.html"><button type="button" class="btn"> <img src="contactus.png" alt=""> </button></a>   
         </div>
     </div>
-
-
-
-
-
-
-
-
-
 
       </div>
     </div>
   </div>
 </div>
-
 
 <p>created by @sagarbank</p>
     </body>
