--- a/Loans.html
+++ b/Loans.html
@@ -49,7 +49,7 @@
         </div>
         <div class="col-sm-4">
           <h1>bussiness</h1>
-          <button type="button" class="btn"> <img src="Bussiness.png" alt=""> </button>
+          <button type="button" class="btn"> <img src="bussiness.png" alt=""> </button>
         </div>
     </div>
 
@@ -66,7 +66,7 @@
         </div>
         <div class="col-sm-4">
           <h1>Contact us..</h1>
-          <a href="Contact.html"><button type="button" class="btn"> <img src="contactus.png" alt=""> </button></a>   
+          <a href="Contact.html"><button type="button" class="btn"> <img src="contactus.png" alt=""> </button></a>
         </div>
     </div>
 
