--- a/Contact.html
+++ b/Contact.html
@@ -16,6 +16,7 @@
       <div class="jumbotron text-center">
         <h1>Welcome To the Web Bank</h1>
         <p>Your Problem..., Our Solution....! </p>
+        <img src="contactmain.png" alt="">
         <h3>Contact our Executives for FREE..!!!!</h3>
         <p>Have doubts about our policies, interest rates and many more????</p>
         <p>We are glad to clear them...!</p>
@@ -53,7 +54,7 @@
   </select>
 </div>
 
-<a href="Loans.html"><button type="submit" class="btn btn-primary">Confirm slot</button></a>
+<a href="Account.html"><button type="submit" class="btn btn-primary">Confirm slot</button></a>
 </form>
 
 
