--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <p>Your Problem..., Our Solution....! </p>
         <h3>Login page</h3>
         <img src="login.png" alt="">
-        <form style="margin:10px 500px">
+        <form style="margin:10% 25%">
   <div class="form-group">
     <label for="email">Registered Email ID </label>
     <input type="email" class="form-control" placeholder="Enter Mail" id="email">
